# f1-dashboard

./: .gitignore  LICENSE  pyproject.toml
app/: main.py
f1_dashboard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
